small performance optimization